# Gradcafe-Admissions-Insights

./: .gitignore  README.md  generate_config.py  pyproject.toml
docs/: architecture.mmd
src/data_processing/: extract_universities.py  process_to_parquet.py
src/scrapy_project/: scrapy.cfg
src/scrapy_project/Gradcafe/: items.py  middlewares.py  pipelines.py  settings.py
src/scrapy_project/Gradcafe/spiders/: results.py
src/utils/: file_handling.py  load_config.py  logger.py
